@startuml

package Presentation {
    class ManageCandidateUI
}

package Domain {
    class Candidate
}


package Application {
    class ManageCandidateController
}


Presentation.ManageCandidateUI --> Application.ManageCandidateController
Application.ManageCandidateController ---> Domain.Candidate

@enduml